@startuml domain modeling

header
A user should be able to create a recipe 
which should have at least one type of fish,
and this fish should be represented in the map,
which displays the location of various
fishes and various Protected areas.
end header

class User {
    + name: string
    + username: string
    + password: string
    + portugueseOrEnglish: bool 
    ' (If true, the app will be in Portuguese, otherwise, it will be in English.)
}

class Recipe {
    + title: string
    + sustainabilityRate: float
    + cuisineType: string
    + ingredients: List<string>
    + rating: float
    + permanentPost : bool
}


class Fish {
    + name: string
    + origin: string
    + sustainabilityRate: float
    + avgPricePerKg: float
}

class Map {
    + location: List<string>
    + protectedAreas: List<string>
}


Map "1" -- "1..*" Fish : has
Recipe "*" -- "1..*" Fish : has
User "1" -- "*" Recipe : creates
@enduml

